<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator_screen_general">%1$s%2$s</string>
    <string name="calculator_screen_initial">0</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_dot">.</string>
    <string name="button_equal">=</string>
    <string name="button_add">+</string>
    <string name="button_multiply">x</string>
    <string name="button_divide">:</string>
    <string name="button_percent">%</string>
    <string name="button_square_root">SQRT</string>
    <string name="button_subtraction">-</string>
    <string name="button_memory_recall">MRC</string>
    <string name="button_memory_addition">M+</string>
    <string name="button_clear_entry">C</string>
    <string name="memory_indicator">M</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="button_memory_subtraction">M-</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="button_go">Go</string>
    <string name="exchange_result">%1$s are equal to %2$s</string>
</resources>
