<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorScreen"
        android:gravity="end"
        tools:text="0"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal1"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical1"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_memory_recall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_memory_recall"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal2"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal1" />

    <Button
        android:id="@+id/button_memory_substraction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_memory_substraction"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal2"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal1" />

    <Button
        android:id="@+id/button_memory_addition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_memory_addition"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal2"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical5"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal1" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_clear_entry"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal3"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical1"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal2" />

    <Button
        android:id="@+id/button_square_root"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_square_root"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal3"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal2" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_percent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal3"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal2" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_divide"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal3"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical5"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal2" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_7"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal4"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical1"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal3" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_8"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal4"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal3" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_9"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal4"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal3" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_multiply"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal4"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical5"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal3" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_4"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal5"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical1"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal4" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_5"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal5"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal4" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_6"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal5"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal4" />

    <Button
        android:id="@+id/button_substract"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_substraction"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal5"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical5"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal4" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_1"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal6"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical1"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal5" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal6"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal5" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_3"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal6"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal5" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_0"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal7"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical1"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal6" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_dot"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal7"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical2"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal6" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_equal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal7"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical3"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal6" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="@string/button_add"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal7"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical4"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical5"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Currency converter"
        android:textColor="@color/colorScreen"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical5"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal7"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical1" />


</androidx.constraintlayout.widget.ConstraintLayout>